# extinct-dino

./: .gitignore  .pre-commit-config.yaml  README.md  generate_confs.sh  mypy.ini  pyproject.toml
Paper/: main.tex
extinct/: main.py  utils.py
extinct/components/callbacks/: __init__.py  dino_updates.py  logging.py  ssl_eval.py
extinct/components/datamodules/: __init__.py  base.py  celeba_datamodule.py  dino.py  structures.py
extinct/components/models/: __init__.py  base.py  dann.py  erm.py  erm_baseline.py  finetuning.py  ganin_baseline.py  kc.py  kc_baseline.py  laftr.py  laftr_baseline.py  predefined.py
extinct/components/models/dino/: __init__.py  dino.py  eval.py  head.py  models.py  vit.py
extinct/configs/: configen.yaml  main.yaml
extinct/configs/aux_trainer/: base.yaml  local.yaml  srv.yaml  unit_test.yaml
extinct/configs/data/: adult.yaml  celeba.yaml  celeba_base.yaml  celeba_dino.yaml  celeba_dino_local.yaml  celeba_local.yaml
extinct/configs/exp/: base.yaml  local.yaml  srv.yaml  unit_test.yaml
extinct/configs/model/: base.yaml  dino.yaml  erm.yaml  ganin.yaml  kc.yaml  laftr.yaml  local_dino.yaml
extinct/configs/trainer/: base.yaml  dino.yaml  unit_test.yaml
extinct/datamodules/: __init__.py  base.py  celeba_datamodule.py  dino.py  structures.py  utils.py
extinct/hydra/extinct/components/datamodules/: configs.py
extinct/hydra/extinct/components/models/: configs.py
extinct/hydra/extinct/components/models/dino/: configs.py
extinct/hydra/extinct/datamodules/: configs.py
extinct/hydra/extinct/models/: configs.py
extinct/hydra/extinct/models/dino/: configs.py
extinct/hydra/pytorch_lightning/trainer/: configs.py
extinct/models/: __init__.py  aux_classifier.py  base.py  dino.py  erm_baseline.py  finetuning.py  kc_baseline.py  laftr_baseline.py  predefined.py
extinct/models/dino/: __init__.py  augmentation.py  dino.py  eval.py  head.py  loss.py  utils.py  vit.py
extinct/utils/: callbacks.py
paper/: main.tex  references.bib
tests/: callbacks_test.py  model_test.py  quick_test.py
