[tool.poetry]
name = "extinct"
version = "0.0.1.dev0"
description = "Dino go RAwR."
authors = ["PAL <info@predictive-analytics-lab.com>"]
license = "Apache License 2.0"
include=["extinct/py.typed"]
classifiers=[
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
keywords=["pytorch", "pytorch-lightning", "lightning-bolts"]
repository="https://github.com/olliethomas/extinct-dino"
readme="README.md"

[tool.poetry.dependencies]
python = "^3.9"
albumentations = "^1.0.0"
hydra-submitit-launcher = {version = "^1.1.1", allow-prereleases = true}
neoconfigen = {git = "https://github.com/predictive-analytics-lab/neoconfigen.git", branch = "master"}
palbolts = {git = "https://github.com/predictive-analytics-lab/pal-bolts.git", branch = "main"}
palkit = "*"
wandb = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pydocstyle = "*"
pytest = "*"
python-type-stubs = {git = "https://github.com/predictive-analytics-lab/python-type-stubs.git", branch = "main"}
pylint = "*"

[tool.poetry.scripts]
rawr = "extinct.main:launcher"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
known_third_party = ["PIL", "albumentations", "bolts", "cv2", "ethicml", "fair_bolts", "hydra", "kit", "numpy", "omegaconf", "pandas", "pytest", "pytorch_lightning", "torch", "torchmetrics"]
known_future_library = []
extra_standard_library = ["__future__", "typing_extensions"]
line_length = 88
profile = "black"
force_sort_within_sections = "True"
classes = ["MISSING"]

[tool.mypy]
python_version = "3.9"
no_implicit_optional = true
allow_redefinition = true
strict_equality = true
check_untyped_defs = true
warn_unreachable = true
disallow_any_unimported = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
show_error_codes = true
exclude = "hydra"

[[tool.mypy.overrides]]
module = [
    "albumentations.*",
    "cv2.*",
    "cvxpy.*",
    "cvxpylayers.*",
    "flash.*",
    "git.*",
    "matplotlib.*",
    "pandas",
    "PIL.*",
    "pl_bolts.*",
    "hydra.*",
    "scipy.*",
    "sklearn.*",
    "torchvision.*",
    "tqdm.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ethicml.*",
    "fair_bolts.*",
    "hydra.*",
    "kit.*",
    "omegaconf.*",
    "pytest.*",
    "pytorch_lightning.*",
    "torch.*",
    "torchmetrics.*",
    "wandb.*"
]
follow_imports = "skip"
follow_imports_for_stubs = true
